# game-engine

./: .gitignore  CMakeLists.txt
include/: graphics.h  window.h
shaders/: shader.frag  shader.vert
src/: CMakeLists.txt  graphics.c  main.c  window.c
